Added more hooks and wrappers + save rank identity + clan home