@@ -6,12 +6,20 @@ import com.griefdefender.api.clan.ClanHome;
 import com.griefdefender.api.clan.Rank;
 import com.griefdefender.lib.flowpowered.math.vector.Vector3i;
 import com.griefdefender.lib.kyori.adventure.text.Component;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.world.level.Level;
+import net.minecraft.server.level.ServerLevel;
 import java.util.Locale;
 import java.util.*;
+import net.minecraft.core.BlockPos;
+
 
 import net.hosenka.alliance.Alliance;
 import net.hosenka.alliance.AllianceRegistry;
 import net.hosenka.clan.ClanRegistry;
+
 
 public class GDClanImpl implements Clan {
 
@@ -20,6 +28,42 @@ public class GDClanImpl implements Clan {
     public GDClanImpl(net.hosenka.clan.Clan clan) {
         this.source = clan;
     }
+
+    private ServerLevel resolveHomeLevel() {
+        if (!source.hasHome() || ServerHolder.get() == null) return null;
+        ResourceLocation rl = ResourceLocation.tryParse(source.getHomeDimension());
+        if (rl == null) return null;
+        ResourceKey<Level> key = ResourceKey.create(Registries.DIMENSION, rl);
+        return ServerHolder.get().getLevel(key);
+    }
+
+    private UUID resolveHomeWorldUniqueId() {
+        ServerLevel level = resolveHomeLevel();
+        if (level == null) return null;
+        var core = com.griefdefender.api.GriefDefender.getCore();
+        return core.getWorldUniqueId(level);
+    }
+
+    private ServerLevel resolveBaseLevel() {
+        var server = ServerHolder.get();
+        if (server == null) return null;
+
+        // Prefer clan home dimension if valid/loaded
+        if (source.hasHome()) {
+            ResourceLocation rl = ResourceLocation.tryParse(source.getHomeDimension());
+            if (rl != null) {
+                ResourceKey<Level> key = ResourceKey.create(Registries.DIMENSION, rl);
+                ServerLevel homeLevel = server.getLevel(key);
+                if (homeLevel != null) {
+                    return homeLevel;
+                }
+            }
+        }
+
+        // Fallback: overworld (spawn)
+        return server.getLevel(Level.OVERWORLD);
+    }
+
 
     /* ---------------- CatalogType ---------------- */
 
@@ -56,23 +100,10 @@ public class GDClanImpl implements Clan {
 
     @Override
     public String getDescription() {
-        return "";
+        return source.getDescription();
     }
 
-    @Override
-    public UUID getBaseWorldUniqueId() {
-        return null;
-    }
 
-    @Override
-    public Vector3i getBasePos() {
-        return null;
-    }
-
-    @Override
-    public List<ClanHome> getHomes() {
-        return Collections.emptyList();
-    }
 
     @Override
     public List<Clan> getAllies() {
@@ -97,15 +128,16 @@ public class GDClanImpl implements Clan {
         for (UUID clanId : alliance.getClans()) {
             if (clanId.equals(source.getId())) continue;
 
+            var provider = com.griefdefender.api.GriefDefender.getCore().getClanProvider();
+            ClansReforgedClanProvider cr = (provider instanceof ClansReforgedClanProvider p) ? p : null;
+
             var allied = ClanRegistry.getClan(clanId);
             if (allied != null) {
-                result.add(new GDClanImpl(allied));
-                net.hosenka.util.CRDebug.log("[GD] -> ally added tag=" + allied.getTag() + " id=" + allied.getId());
-            } else {
-                net.hosenka.util.CRDebug.log("[GD] -> ally UUID in alliance but clan not found: " + clanId);
+                Clan wrapped = (cr != null) ? cr.getClanById(clanId) : new GDClanImpl(allied);
+                if (wrapped != null) result.add(wrapped);
             }
-        }
 
+        }
         net.hosenka.util.CRDebug.log("[GD] getAllies() returning " + result.size() + " allies for clan=" + source.getTag());
         return result;
     }
@@ -119,19 +151,37 @@ public class GDClanImpl implements Clan {
     @Override
     public List<ClanPlayer> getMembers(boolean onlineOnly) {
         List<ClanPlayer> members = new ArrayList<>();
+
+        var provider = com.griefdefender.api.GriefDefender.getCore().getClanProvider();
+        ClansReforgedClanProvider cr = (provider instanceof ClansReforgedClanProvider p) ? p : null;
+
         for (UUID memberId : source.getMembers()) {
-            members.add(new GDClanPlayerImpl(memberId, source));
+            ClanPlayer cp = (cr != null) ? cr.getClanPlayer(memberId) : new GDClanPlayerImpl(memberId, source);
+            if (cp == null) continue;
+
+            if (!onlineOnly || cp.isOnline()) {
+                members.add(cp);
+            }
         }
+
         return members;
     }
 
     @Override
     public List<ClanPlayer> getLeaders(boolean onlineOnly) {
-        if (source.getLeaderId() == null) {
-            return Collections.emptyList();
-        }
-        return List.of(new GDClanPlayerImpl(source.getLeaderId(), source));
+        UUID leaderId = source.getLeaderId();
+        if (leaderId == null) return Collections.emptyList();
+
+        var provider = com.griefdefender.api.GriefDefender.getCore().getClanProvider();
+        ClansReforgedClanProvider cr = (provider instanceof ClansReforgedClanProvider p) ? p : null;
+
+        ClanPlayer cp = (cr != null) ? cr.getClanPlayer(leaderId) : new GDClanPlayerImpl(leaderId, source);
+        if (cp == null) return Collections.emptyList();
+
+        if (onlineOnly && !cp.isOnline()) return Collections.emptyList();
+        return List.of(cp);
     }
+
 
     @Override
     public List<Rank> getRanks() {
@@ -185,6 +235,56 @@ public class GDClanImpl implements Clan {
     @Override
     public boolean isRival(String tag) {
         return false;
+    }
+
+    @Override
+    public UUID getBaseWorldUniqueId() {
+        ServerLevel level = resolveBaseLevel();
+        if (level == null) return null; // only possible very early during startup
+        return com.griefdefender.api.GriefDefender.getCore().getWorldUniqueId(level);
+    }
+
+    @Override
+    public Vector3i getBasePos() {
+        ServerLevel level = resolveBaseLevel();
+        if (level == null) return null; // only possible very early during startup
+
+        // If home is set, base pos = home pos
+        if (source.hasHome()) {
+            return new Vector3i(
+                    (int) Math.floor(source.getHomeX()),
+                    (int) Math.floor(source.getHomeY()),
+                    (int) Math.floor(source.getHomeZ())
+            );
+        }
+
+        // Otherwise, base pos = world spawn pos
+        BlockPos spawn = level.getSharedSpawnPos();
+        return new Vector3i(spawn.getX(), spawn.getY(), spawn.getZ());
+    }
+
+
+    @Override
+    public List<ClanHome> getHomes() {
+        UUID wid = resolveHomeWorldUniqueId();
+        if (wid == null) return Collections.emptyList();
+
+        Vector3i pos = new Vector3i(
+                (int) Math.floor(source.getHomeX()),
+                (int) Math.floor(source.getHomeY()),
+                (int) Math.floor(source.getHomeZ())
+        );
+
+        Object location = null;
+        ServerLevel level = resolveHomeLevel();
+        if (level != null) {
+            location = net.minecraft.core.GlobalPos.of(
+                    level.dimension(),
+                    net.minecraft.core.BlockPos.containing(source.getHomeX(), source.getHomeY(), source.getHomeZ())
+            );
+        }
+
+        return List.of(new CRGDClanHome("home", wid, pos, location));
     }
 
 
